<?xml version="1.0"?>
<package format="2">
  <name>ariac_example</name>
  <version>3.0.6</version>
  <description>An example of an ARIAC competitor's package for ARIAC 2019.</description>
  <author email="william@osrfoundation.org">William Woodall</author>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nist_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

</package>
