<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ariac_human</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="justin.albrecht@nist.gov">justin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_controller</depend>
  <depend>rosbridge_server</depend>
  <depend>nav2_simple_commander</depend>

  <exec_depend> ariac_msgs </exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
