<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ariac_human</name>
  <version>2024.1.0</version>
  <description>Definitions for the human in the ARIAC simulation</description>
  <maintainer email="justin.albrecht@nist.gov">justin</maintainer>
  <license>NIST</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>gazebo_ros_pkgs</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_controller</depend>
  <depend>rosbridge_server</depend>
  <depend>nav2_simple_commander</depend>

  <exec_depend> ariac_msgs </exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
