<?xml version="1.0"?>
<package format="2">
  <name>controller_switcher</name>
  <version>0.0.0</version>
  <description>Package to switch the controllers for the gantry and kitting robots</description>
  <maintainer email="justin@todo.todo">justin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>controller_manager_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <export>
  </export>
</package>
